Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/010_def_and_decl.xi
f(x:int):bool
{
    return true
}

f(x:int):bool

//@PRACOWNIA
//@should_not_typecheck
